# AP2---django

./: .jupyter  db.sqlite3  pyproject.toml  teste.py
cadastro_aluno/: api.py  apps.py  models.py  schemas.py  views.py
cadastro_aluno/migrations/: 0001_initial.py  0002_alter_tbalunos_options_alter_tbdisciplinas_options_and_more.py  0003_tbalunos_endereco_tbnotas_aluno_tbnotas_disciplina.py  0004_tbalunos_nome_mae.py  0005_tbcarro.py
core/: settings.py  urls.py
